[package]
name = "icmp2tunnel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
icmp2tunnel-proto = { path = "../crates/icmp2tunnel-proto" }

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "socks_decode"
path = "fuzz_targets/socks_decode.rs"
test = false
doc = false
bench = false
