[package]
name = "icmp2tunnel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
icmp2tunnel-proto = { path = "../icmp2tunnel-proto" }

[dev-dependencies]
icmp2tunnel-transport = { path = "../icmp2tunnel-transport" }

[lints]
workspace = true
