[package]
name = "icmp2tunnel-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
subtle = "2.6"

[lints]
workspace = true
