[package]
name = "icmp2tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
icmp2tunnel-core = { path = "../icmp2tunnel-core" }
icmp2tunnel-socks = { path = "../icmp2tunnel-socks" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
